# MUSIC

./: .clang-format  .freeze2.h  .gitignore  BUGS  CHANGELOG  CMakeLists.txt  Dockerfile  GNUmakefile  NOTES-reuse-stencil.md  NOTES.md  README  README.md  advance.cpp  advance.h  advance_bck.cpp  backup-freeze.cpp  benchmark.sh  collect_events.sh  compile.sh  data.h  databck.h  dissipative-1.cpp  dissipative.cpp  dissipative.h  eos.cpp  eos.h  evolve.cpp  evolve.h  evolve1.cpp  evolve2.cpp  evolve_jet_template.cpp  formatCode.sh  freeze.cpp  freeze.h  freezeCorr.cpp  freeze_pseudo.cpp  freezecorr.cpp  generate_jobs.sh  generate_muisc_inputfile.py  generate_music_inputfile.py  (+29 more)
.github/workflows/: BuildTest.yml
EOS/: download_EOSQ.sh  download_Neos2D.sh  download_Neos4D.sh  download_hotQCD.sh  download_s95p.sh
EOS/hotQCD/: particles.txt
EOS/s95p-v1/: s95p-v1_par4.dat~
benchmark/: RESULTS.md  music_input_Gubser_large
doxygen/: configure
example_inputfiles/: music_input_Bjorken_expansion  music_input_Bjorken_expansion_with_critical_modes
example_inputfiles/2D_IPGlasma/: music_input_mode_2
example_inputfiles/2D_IPGlasma/IPGlasma_2D_testEvent/: music_input_mode_2
example_inputfiles/2D_IPGlasma/IPGlasma_2D_testEvent/input/: README.md  input
example_inputfiles/3D_consttau/: music_input_mode_2
example_inputfiles/3D_dynamical/: music_input_mode_2
example_inputfiles/IPGlasma_2D/: music_input_mode_2  music_input_mode_2_withEtaProfile
example_inputfiles/IPGlasma_2D/input/: README.md  download_testIPGevent.sh
example_inputfiles/dynamical_3D/: music_input_mode_2
example_inputfiles/smooth_3D/: music_input_mode_2
hackathon/: NOTES.md  benchmark.sh
hackathon/benchmark/: music_input_Gubser_middle  music_input_Gubser_small
initial/: SMASH_IC.oscar
input_params/: RuRuSMASH200  music4DEoS
src/: CMakeLists.txt  GNUmakefile  Grid.cpp  Grid.hpp  HydroinfoMUSIC.cpp  HydroinfoMUSIC.h  PGImakefile  advance.cpp  advance.h  bulk_pi_chem.cpp  bulk_pi_chem.h  cell.cpp  cell.h  cell_unittest.cpp  cornelius.cpp  cornelius.h  critical_modes.cpp  critical_modes.h  critical_modes_unittest.cpp  data.h  data_struct.h  dissipative.cpp  dissipative.h  doctest.h  emoji.cpp  emoji.h  eos.cpp  eos.h  eos_1DGenerator.cpp  eos_1DGenerator.h  eos_4D.cpp  eos_4D.h  eos_EOSQ.cpp  eos_EOSQ.h  eos_UH.cpp  eos_UH.h  eos_WB.cpp  eos_WB.h  eos_base.cpp  eos_base.h  (+82 more)
src/old_src/: glauber.h
src/tests/: hydro_source_test.cpp
src/unit_tests/: test_cell.cpp
tests/Gubser_flow/: Gubser_solution_ideal.py  RunAutoTest.sh  TestOutputFiles.py  make_plots.py  make_plots_ideal.py  make_plots_ideal_with_rhob.py  make_plots_sigma_munu.py  music_input_Gubser  music_input_Gubser_ideal  music_input_Gubser_ideal_with_rhob  music_input_Gubser_ideal_with_rhob_and_critical_modes  readme
tests/testIPGlasma2D/: RunAutoTest.sh  TestOutputFiles.py  music_input_mode_2
tests/test_1+1DDiffusionTest_Cartesian/: RunAutoTest.sh  TestOutputFiles.py  make_plots.py  music_input_1+1DDiffusionTest  music_input_1+1DDiffusionTest_x  music_input_1+1DDiffusionTest_y  music_input_1+1DDiffusionTest_z
tests/test_1+1DRiemannTest_Cartesian/: 1DRiemannTest_e.txt  1DRiemannTest_theta.txt  1DRiemannTest_v.txt  RunAutoTest.sh  TestOutputFiles.py  TestOutputVisFiles.py  make_plots.py  music_input_1+1DRiemannTest  music_input_1+1DRiemannTest_x  music_input_1+1DRiemannTest_x_viscous  music_input_1+1DRiemannTest_y  music_input_1+1DRiemannTest_y_viscous  music_input_1+1DRiemannTest_z  music_input_1+1DRiemannTest_z_viscous
tests/test_1+1D_with_Akihiko/: RunAutoTest.sh  TestOutputFiles.py  make_plots.py  music_input_test_baryon_diffusion  readme
tests/test_eos/: music_input_test_eos_10  music_input_test_eos_11  music_input_test_eos_12  music_input_test_eos_13  music_input_test_eos_14  music_input_test_eos_15  music_input_test_eos_19  music_input_test_eos_20  music_input_test_eos_4  music_input_test_eos_7  music_input_test_eos_8  music_input_test_eos_9  music_input_test_eos_91
tests/test_source_terms/: music_input_finite_thickness  music_input_zero_thickness
tests/unittest_files/: music_input_criticalmodes
utilities/: CSplottools.py  check_surface.py  enlarge_grid_size.py  generate_eps_freeze_list.py  generate_music_inputfile.py  generate_smooth_3d_profiles.py  move_strings_to_origin.py  music_parameters_dict.py  sweeper.sh  sweeper_spectra_shell.sh
